src/test/ui/huge-array-simple-32.stderr
error: the type `[u8; 2147516416]` is too big for the current architecture
  --> $DIR/huge-array-simple-32.rs:9:9
   |
LL |     let _fat: [u8; (1<<31)+(1<<15)] =
   |         ^^^^

error: aborting due to previous error

